# ismrmrd

./: CMakeLists.txt  conanfile.py
